@@ -27,35 +27,41 @@ package hudson.markup;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.not;
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import com.gargoylesoftware.htmlunit.HttpMethod;
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.WebRequest;
-import com.gargoylesoftware.htmlunit.WebResponse;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
 import hudson.security.AuthorizationStrategy.Unsecured;
 import hudson.security.HudsonPrivateSecurityRealm;
 import java.io.IOException;
 import java.io.Writer;
-import java.net.URL;
-import org.junit.Rule;
-import org.junit.Test;
+import java.net.URI;
+import org.htmlunit.HttpMethod;
+import org.htmlunit.Page;
+import org.htmlunit.WebRequest;
+import org.htmlunit.WebResponse;
+import org.htmlunit.html.HtmlPage;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.TestExtension;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 import org.kohsuke.stapler.DataBoundConstructor;
 
 /**
  * @author Kohsuke Kawaguchi
  */
-public class MarkupFormatterTest {
+@WithJenkins
+class MarkupFormatterTest {
 
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
+    private JenkinsRule j;
+
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        j = rule;
+    }
 
     @Test
-    public void configRoundtrip() throws Exception {
+    void configRoundtrip() throws Exception {
         j.jenkins.setSecurityRealm(new HudsonPrivateSecurityRealm(false));
         j.jenkins.setAuthorizationStrategy(new Unsecured());
         j.jenkins.setMarkupFormatter(new DummyMarkupImpl("hello"));
@@ -67,6 +73,7 @@ public class MarkupFormatterTest {
     public static class DummyMarkupImpl extends MarkupFormatter {
         public final String prefix;
 
+        @SuppressWarnings("checkstyle:redundantmodifier")
         @DataBoundConstructor
         public DummyMarkupImpl(String prefix) {
             this.prefix = prefix;
@@ -82,7 +89,7 @@ public class MarkupFormatterTest {
     }
 
     @Test
-    public void defaultEscaped() throws Exception {
+    void defaultEscaped() throws Exception {
         assertEquals("&lt;your thing here&gt;", j.jenkins.getMarkupFormatter().translate("<your thing here>"));
         assertEquals("", j.jenkins.getMarkupFormatter().translate(""));
         assertEquals("", j.jenkins.getMarkupFormatter().translate(null));
@@ -90,7 +97,7 @@ public class MarkupFormatterTest {
 
     @Test
     @Issue("SECURITY-2153")
-    public void security2153RequiresPOST() throws Exception {
+    void security2153RequiresPOST() throws Exception {
         final JenkinsRule.WebClient wc = j.createWebClient();
         wc.setThrowExceptionOnFailingStatusCode(false);
         final HtmlPage htmlPage = wc.goTo("markupFormatter/previewDescription?text=lolwut");
@@ -102,9 +109,9 @@ public class MarkupFormatterTest {
 
     @Test
     @Issue("SECURITY-2153")
-    public void security2153SetsCSP() throws Exception {
+    void security2153SetsCSP() throws Exception {
         final JenkinsRule.WebClient wc = j.createWebClient();
-        final Page htmlPage = wc.getPage(wc.addCrumb(new WebRequest(new URL(j.jenkins.getRootUrl() + "/markupFormatter/previewDescription?text=lolwut"), HttpMethod.POST)));
+        final Page htmlPage = wc.getPage(wc.addCrumb(new WebRequest(new URI(j.jenkins.getRootUrl() + "/markupFormatter/previewDescription?text=lolwut").toURL(), HttpMethod.POST)));
         final WebResponse response = htmlPage.getWebResponse();
         assertEquals(200, response.getStatusCode());
         assertThat(response.getContentAsString(), containsString("lolwut"));
