@@ -8,19 +8,12 @@ import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.xml.HasXPath.hasXPath;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import com.gargoylesoftware.htmlunit.FailingHttpStatusCodeException;
-import com.gargoylesoftware.htmlunit.HttpMethod;
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.WebRequest;
-import com.gargoylesoftware.htmlunit.html.HtmlForm;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
-import com.gargoylesoftware.htmlunit.xml.XmlPage;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.Util;
 import hudson.model.Cause;
@@ -28,38 +21,51 @@ import hudson.model.FreeStyleProject;
 import hudson.model.User;
 import hudson.security.ACL;
 import hudson.security.ACLContext;
+import jakarta.servlet.http.HttpServletResponse;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Collection;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
-import javax.servlet.http.HttpServletResponse;
 import jenkins.model.Jenkins;
 import jenkins.security.apitoken.ApiTokenPropertyConfiguration;
 import jenkins.security.apitoken.ApiTokenStore;
 import jenkins.security.apitoken.TokenUuidAndPlainValue;
 import net.sf.json.JSONObject;
-import org.junit.Rule;
-import org.junit.Test;
+import org.htmlunit.FailingHttpStatusCodeException;
+import org.htmlunit.HttpMethod;
+import org.htmlunit.Page;
+import org.htmlunit.WebRequest;
+import org.htmlunit.html.HtmlForm;
+import org.htmlunit.html.HtmlPage;
+import org.htmlunit.xml.XmlPage;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.JenkinsRule.WebClient;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 import org.jvnet.hudson.test.recipes.LocalData;
 
 /**
  * @author Kohsuke Kawaguchi
  */
-public class ApiTokenPropertyTest {
+@WithJenkins
+class ApiTokenPropertyTest {
 
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
+    private JenkinsRule j;
+
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        j = rule;
+    }
 
     /**
      * Tests the UI interaction and authentication.
      */
     @Test
-    public void basics() throws Exception {
+    void basics() throws Exception {
         ApiTokenPropertyConfiguration tokenConfig = ApiTokenPropertyConfiguration.get();
         tokenConfig.setTokenGenerationOnCreationEnabled(true);
 
@@ -71,7 +77,7 @@ public class ApiTokenPropertyTest {
 
         // Make sure that user is able to get the token via the interface
         try (ACLContext acl = ACL.as(u)) {
-            assertEquals("User is unable to get its own token", token, t.getApiToken());
+            assertEquals(token, t.getApiToken(), "User is unable to get its own token");
         }
 
         // test the authentication via Token
@@ -79,9 +85,9 @@ public class ApiTokenPropertyTest {
         assertEquals(u, wc.executeOnServer(User::current));
 
         // Make sure the UI shows the token to the user
-        HtmlPage config = wc.goTo(u.getUrl() + "/configure");
+        HtmlPage config = wc.goTo(u.getUrl() + "/security/");
         HtmlForm form = config.getFormByName("config");
-        assertEquals(token, form.getInputByName("_.apiToken").getValueAttribute());
+        assertEquals(token, form.getInputByName("_.apiToken").getValue());
 
         // round-trip shouldn't change the API token
         j.submit(form);
@@ -89,7 +95,7 @@ public class ApiTokenPropertyTest {
     }
 
     @Test
-    public void security49Upgrade() throws Exception {
+    void security49Upgrade() throws Exception {
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
         User u = User.getOrCreateByIdOrFullName("foo");
         String historicalInitialValue = Util.getDigestOf(Jenkins.get().getSecretKey() + ":" + u.getId());
@@ -113,7 +119,7 @@ public class ApiTokenPropertyTest {
 
     @Issue("SECURITY-200")
     @Test
-    public void adminsShouldBeUnableToSeeTokensByDefault() throws Exception {
+    void adminsShouldBeUnableToSeeTokensByDefault() throws Exception {
         ApiTokenPropertyConfiguration tokenConfig = ApiTokenPropertyConfiguration.get();
         tokenConfig.setTokenGenerationOnCreationEnabled(true);
 
@@ -125,14 +131,14 @@ public class ApiTokenPropertyTest {
 
         // Make sure the UI does not show the token to another user
         WebClient wc = createClientForUser("bar");
-        HtmlPage config = wc.goTo(u.getUrl() + "/configure");
+        HtmlPage config = wc.goTo(u.getUrl() + "/security/");
         HtmlForm form = config.getFormByName("config");
-        assertEquals(Messages.ApiTokenProperty_ChangeToken_TokenIsHidden(), form.getInputByName("_.apiToken").getValueAttribute());
+        assertEquals(Messages.ApiTokenProperty_ChangeToken_TokenIsHidden(), form.getInputByName("_.apiToken").getValue());
     }
 
     @Issue("SECURITY-200")
     @Test
-    public void adminsShouldBeUnableToChangeTokensByDefault() throws Exception {
+    void adminsShouldBeUnableToChangeTokensByDefault() throws Exception {
         ApiTokenPropertyConfiguration tokenConfig = ApiTokenPropertyConfiguration.get();
         tokenConfig.setTokenGenerationOnCreationEnabled(true);
 
@@ -146,22 +152,21 @@ public class ApiTokenPropertyTest {
         WebClient wc = createClientForUser("bar")
                 .withThrowExceptionOnFailingStatusCode(false);
         HtmlPage requirePOST = wc.goTo(foo.getUrl() + "/" + descriptor.getDescriptorUrl() + "/changeToken");
-        assertEquals("method should not be allowed",
-                HttpURLConnection.HTTP_BAD_METHOD,
-                requirePOST.getWebResponse().getStatusCode());
+        assertEquals(HttpURLConnection.HTTP_BAD_METHOD,
+                requirePOST.getWebResponse().getStatusCode(),
+                "method should not be allowed");
 
         wc.setThrowExceptionOnFailingStatusCode(true);
-        WebRequest request = new WebRequest(new URL(j.getURL().toString() + foo.getUrl() + "/" + descriptor.getDescriptorUrl() + "/changeToken"), HttpMethod.POST);
+        WebRequest request = new WebRequest(new URI(j.getURL().toString() + foo.getUrl() + "/" + descriptor.getDescriptorUrl() + "/changeToken").toURL(), HttpMethod.POST);
         HtmlPage res = wc.getPage(request);
 
         // TODO This nicer alternative requires https://github.com/jenkinsci/jenkins/pull/2268 or similar to work
 //        HtmlPage res = requirePOST.getPage().getForms().get(0).getElementsByAttribute("input", "type", "submit").get(0).click();
-        assertEquals("Update token response is incorrect",
-                Messages.ApiTokenProperty_ChangeToken_SuccessHidden(), "<div>" + res.getBody().asNormalizedText() + "</div>");
+        assertEquals(Messages.ApiTokenProperty_ChangeToken_SuccessHidden(), "<div>" + res.getBody().asNormalizedText() + "</div>", "Update token response is incorrect");
     }
 
     @Test
-    public void postWithUsernameAndTokenInBasicAuthHeader() throws Exception {
+    void postWithUsernameAndTokenInBasicAuthHeader() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject("bar");
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
         User.getById("foo", true);
@@ -178,7 +183,7 @@ public class ApiTokenPropertyTest {
     }
 
     @NonNull
-    private WebClient createClientForUser(final String id) throws Exception {
+    private WebClient createClientForUser(final String id) {
         User u = User.getById(id, true);
 
         WebClient wc = j.createWebClient();
@@ -188,7 +193,7 @@ public class ApiTokenPropertyTest {
 
     @Test
     @Issue("JENKINS-32776")
-    public void generateNewTokenWithoutName() throws Exception {
+    void generateNewTokenWithoutName() throws Exception {
         j.jenkins.setCrumbIssuer(null);
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
 
@@ -208,12 +213,12 @@ public class ApiTokenPropertyTest {
     @Test
     @LocalData
     @Issue("JENKINS-32776")
-    public void migrationFromLegacyToken() throws Exception {
+    void migrationFromLegacyToken() throws Exception {
         j.jenkins.setCrumbIssuer(null);
 
         // user is still able to connect with legacy token
         User admin = User.getById("admin", false);
-        assertNotNull("Admin user not configured correctly in local data", admin);
+        assertNotNull(admin, "Admin user not configured correctly in local data");
         ApiTokenProperty apiTokenProperty = admin.getProperty(ApiTokenProperty.class);
 
         WebClient wc = j.createWebClient();
@@ -288,14 +293,14 @@ public class ApiTokenPropertyTest {
         assertThat(xmlPage, hasXPath("//authority", is("authenticated")));
     }
 
-    private void checkUserIsNotConnected(WebClient wc) throws Exception {
+    private void checkUserIsNotConnected(WebClient wc) {
         FailingHttpStatusCodeException e = assertThrows(FailingHttpStatusCodeException.class, () -> wc.goToXml("whoAmI/api/xml"));
         assertEquals(401, e.getStatusCode());
     }
 
     @Test
     @Issue("JENKINS-32776")
-    public void legacyTokenChange() throws Exception {
+    void legacyTokenChange() throws Exception {
         j.jenkins.setCrumbIssuer(null);
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
 
@@ -409,7 +414,7 @@ public class ApiTokenPropertyTest {
         List<String> uuidList = apiTokenProperty.getTokenStore().getTokenListSortedByName().stream()
                 .filter(filter)
                 .map(ApiTokenStore.HashedToken::getUuid)
-                .collect(Collectors.toList());
+                .toList();
         for (String uuid : uuidList) {
             revokeToken(wc, user.getId(), uuid);
         }
@@ -460,7 +465,7 @@ public class ApiTokenPropertyTest {
 
     @Test
     @Issue("JENKINS-57484")
-    public void script_addFixedNewToken_Regular() throws Exception {
+    void script_addFixedNewToken_Regular() throws Exception {
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
 
         User user = User.getById("user", true);
@@ -481,7 +486,7 @@ public class ApiTokenPropertyTest {
 
     @Test
     @Issue("JENKINS-57484")
-    public void script_addFixedNewToken_Invalid() throws Exception {
+    void script_addFixedNewToken_Invalid() {
         User user = User.getById("user", true);
         ApiTokenProperty apiTokenProperty = user.getProperty(ApiTokenProperty.class);
 
@@ -499,7 +504,7 @@ public class ApiTokenPropertyTest {
 
     @Test
     @Issue("JENKINS-57484")
-    public void script_generateNewToken() throws Exception {
+    void script_generateNewToken() throws Exception {
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
 
         User user = User.getById("user", true);
@@ -525,7 +530,7 @@ public class ApiTokenPropertyTest {
 
     @Test
     @Issue("JENKINS-57484")
-    public void script_revokeAllTokens() throws Exception {
+    void script_revokeAllTokens() throws Exception {
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
 
         ApiTokenPropertyConfiguration config = ApiTokenPropertyConfiguration.get();
@@ -556,7 +561,7 @@ public class ApiTokenPropertyTest {
 
     @Test
     @Issue("JENKINS-57484")
-    public void script_revokeAllTokensExceptOne() throws Exception {
+    void script_revokeAllTokensExceptOne() throws Exception {
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
 
         ApiTokenPropertyConfiguration config = ApiTokenPropertyConfiguration.get();
@@ -596,7 +601,7 @@ public class ApiTokenPropertyTest {
 
     @Test
     @Issue("JENKINS-57484")
-    public void script_revokeToken() throws Exception {
+    void script_revokeToken() throws Exception {
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
 
         ApiTokenPropertyConfiguration config = ApiTokenPropertyConfiguration.get();
@@ -656,11 +661,11 @@ public class ApiTokenPropertyTest {
         assertThat(page.getWebResponse().getStatusCode(), is(HttpServletResponse.SC_UNAUTHORIZED));
     }
 
-    private void checkInvalidTokenValue(ApiTokenProperty apiTokenProperty, String tokenName, String tokenValue) throws Exception {
+    private void checkInvalidTokenValue(ApiTokenProperty apiTokenProperty, String tokenName, String tokenValue) {
         assertThrows(
-                "The invalid token " + tokenName + " with value " + tokenValue + " was accepted but it should have been rejected.",
                 IllegalArgumentException.class,
-                () -> apiTokenProperty.addFixedNewToken(tokenName, tokenValue));
+                () -> apiTokenProperty.addFixedNewToken(tokenName, tokenValue),
+                "The invalid token " + tokenName + " with value " + tokenValue + " was accepted but it should have been rejected.");
     }
 
     // test no token are generated for new user with the global configuration set to false
