@@ -29,35 +29,42 @@ import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.xml.HasXPath.hasXPath;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import com.gargoylesoftware.htmlunit.FailingHttpStatusCodeException;
-import com.gargoylesoftware.htmlunit.HttpMethod;
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.WebRequest;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
-import com.gargoylesoftware.htmlunit.html.HtmlSpan;
-import com.gargoylesoftware.htmlunit.util.NameValuePair;
-import com.gargoylesoftware.htmlunit.xml.XmlPage;
 import hudson.model.User;
+import java.net.URI;
 import java.net.URL;
 import java.util.List;
 import jenkins.security.ApiTokenProperty;
 import net.sf.json.JSONObject;
-import org.junit.Rule;
-import org.junit.Test;
+import org.htmlunit.FailingHttpStatusCodeException;
+import org.htmlunit.HttpMethod;
+import org.htmlunit.Page;
+import org.htmlunit.WebRequest;
+import org.htmlunit.html.HtmlPage;
+import org.htmlunit.html.HtmlSpan;
+import org.htmlunit.util.NameValuePair;
+import org.htmlunit.xml.XmlPage;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.JenkinsRule.WebClient;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
-public class ApiTokenStatsTest {
+@WithJenkins
+class ApiTokenStatsTest {
 
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
+    private JenkinsRule j;
+
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        j = rule;
+    }
 
     @Test
-    public void roundtrip() throws Exception {
+    void roundtrip() throws Exception {
         j.jenkins.setCrumbIssuer(null);
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
         User u = User.getById("foo", true);
@@ -73,7 +80,7 @@ public class ApiTokenStatsTest {
 
         final String TOKEN_NAME = "New Token Name";
 
-        WebRequest request = new WebRequest(new URL(j.getURL() + "user/" + u.getId() + "/descriptorByName/" + ApiTokenProperty.class.getName() + "/generateNewToken"), HttpMethod.POST);
+        WebRequest request = new WebRequest(new URI(j.getURL() + "user/" + u.getId() + "/descriptorByName/" + ApiTokenProperty.class.getName() + "/generateNewToken").toURL(), HttpMethod.POST);
         request.setRequestParameters(List.of(new NameValuePair("newTokenName", TOKEN_NAME)));
 
         Page page = wc.getPage(request);
@@ -90,7 +97,7 @@ public class ApiTokenStatsTest {
         WebClient restWc = j.createWebClient().withBasicCredentials(u.getId(), tokenValue);
         checkUserIsConnected(restWc, u.getId());
 
-        HtmlPage config = wc.goTo(u.getUrl() + "/configure");
+        HtmlPage config = wc.goTo(u.getUrl() + "/security/");
         assertEquals(200, config.getWebResponse().getStatusCode());
         assertThat(config.getWebResponse().getContentAsString(), containsString(tokenUuid));
         assertThat(config.getWebResponse().getContentAsString(), containsString(tokenName));
@@ -101,7 +108,7 @@ public class ApiTokenStatsTest {
             restWc.goToXml("whoAmI/api/xml");
         }
 
-        HtmlPage configWithStats = wc.goTo(u.getUrl() + "/configure");
+        HtmlPage configWithStats = wc.goTo(u.getUrl() + "/security/");
         assertEquals(200, configWithStats.getWebResponse().getStatusCode());
         HtmlSpan useCounterSpan = configWithStats.getDocumentElement().getOneHtmlElementByAttribute("span", "class", "token-use-counter");
         assertThat(useCounterSpan.getTextContent(), containsString("" + NUM_CALL_WITH_TOKEN));
@@ -111,7 +118,7 @@ public class ApiTokenStatsTest {
         // token is no more valid
         checkUserIsNotConnected(restWc);
 
-        HtmlPage configWithoutToken = wc.goTo(u.getUrl() + "/configure");
+        HtmlPage configWithoutToken = wc.goTo(u.getUrl() + "/security/");
         assertEquals(200, configWithoutToken.getWebResponse().getStatusCode());
         assertThat(configWithoutToken.getWebResponse().getContentAsString(), not(containsString(tokenUuid)));
         assertThat(configWithoutToken.getWebResponse().getContentAsString(), not(containsString(tokenName)));
@@ -125,7 +132,7 @@ public class ApiTokenStatsTest {
         assertThat(xmlPage, hasXPath("//authority", is("authenticated")));
     }
 
-    private void checkUserIsNotConnected(WebClient wc) throws Exception {
+    private void checkUserIsNotConnected(WebClient wc) {
         FailingHttpStatusCodeException e = assertThrows(FailingHttpStatusCodeException.class, () -> wc.goToXml("whoAmI/api/xml"));
         assertEquals(401, e.getStatusCode());
     }
